--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.4",
+    "axios": "^1.6.5",
     "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sheetjs": "^2.0.0"
   }
 }
